--- a/angular.json
+++ b/angular.json
@@ -35,7 +35,9 @@
               "src/styles.scss",
               "node_modules/@fortawesome/fontawesome-free/css/all.min.css"
             ],
-            "scripts": []
+            "scripts": [
+              "./node_modules/epubjs/dist/epub.js"
+            ]
           },
           "configurations": {
             "production": {
