--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@types/jest": "^26.0.20",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
+    "epubjs": "^0.3.83",
     "jest": "^26.6.3",
     "jest-preset-angular": "^8.3.2",
     "karma-coverage": "~2.0.3",
