--- a/package.json
+++ b/package.json
@@ -27,11 +27,14 @@
     "@angular/router": "~11.0.0",
     "@fortawesome/fontawesome-free": "^5.15.1",
     "@ng-bootstrap/ng-bootstrap": "^8.0.0",
+    "@ngx-lite/nav-drawer": "^0.4.6",
+    "@ngx-lite/util": "0.0.0",
     "@types/file-saver": "^2.0.1",
     "angular-ng-autocomplete": "^2.0.5",
     "bootstrap": "^4.5.0",
     "file-saver": "^2.0.5",
     "ng-lazyload-image": "^9.1.0",
+    "ng-sidebar": "^9.4.2",
     "ngx-toastr": "^13.2.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
