--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-slider/ngx-slider": "^2.0.3",
     "@angular/animations": "~11.0.0",
     "@angular/cdk": "^11.0.2",
     "@angular/common": "~11.0.0",
