--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "ng-sidebar": "^9.4.2",
     "ngx-toastr": "^13.2.0",
     "rxjs": "~6.6.0",
+    "swiper": "^6.5.8",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
