--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
+    "@angular-builders/custom-webpack": "^11.1.1",
     "@angular-devkit/build-angular": "~0.1100.0",
     "@angular/cli": "^11.2.11",
     "@angular/compiler-cli": "~11.0.0",
@@ -53,6 +54,7 @@
     "jest-preset-angular": "^8.3.2",
     "karma-coverage": "~2.0.3",
     "protractor": "~7.0.0",
+    "purgecss-webpack-plugin": "^4.0.3",
     "ts-node": "~8.3.0",
     "tslint": "^6.1.3",
     "typescript": "~4.0.2"
