Basic version of sentry is implemented

--- a/angular.json
+++ b/angular.json
@@ -47,7 +47,11 @@
               ],
               "optimization": true,
               "outputHashing": "all",
-              "sourceMap": false,
+              "sourceMap": {
+                "hidden": true,
+                "scripts": true,
+                "styles": true
+              },
               "namedChunks": false,
               "extractLicenses": true,
               "vendorChunk": true,
