--- a/angular.json
+++ b/angular.json
@@ -30,6 +30,11 @@
               "src/favicon.ico",
               "src/assets"
             ],
+            "sourceMap": {
+              "hidden": false,
+              "scripts": true,
+              "styles": true
+            },
             "styles": [
               "node_modules/ngx-toastr/toastr.css",
               "src/styles.scss",
@@ -47,11 +52,6 @@
               ],
               "optimization": true,
               "outputHashing": "all",
-              "sourceMap": {
-                "hidden": true,
-                "scripts": true,
-                "styles": true
-              },
               "namedChunks": false,
               "extractLicenses": true,
               "vendorChunk": true,
