--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@ngx-lite/nav-drawer": "^0.4.6",
     "@ngx-lite/util": "0.0.0",
     "@sentry/angular": "^6.3.6",
+    "@sentry/integrations": "^6.3.6",
     "@types/file-saver": "^2.0.1",
     "angular-ng-autocomplete": "^2.0.5",
     "bootstrap": "^4.5.0",
