--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@types/file-saver": "^2.0.1",
     "angular-ng-autocomplete": "^2.0.5",
     "bootstrap": "^4.5.0",
+    "bowser": "^2.11.0",
     "file-saver": "^2.0.5",
     "ng-lazyload-image": "^9.1.0",
     "ng-sidebar": "^9.4.2",
