--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
   "dependencies": {
     "@angular-slider/ngx-slider": "^2.0.3",
     "@angular/animations": "~11.0.0",
-    "@angular/cdk": "^11.0.2",
     "@angular/common": "~11.0.0",
     "@angular/compiler": "~11.0.0",
     "@angular/core": "~11.0.0",
@@ -38,6 +37,7 @@
     "file-saver": "^2.0.5",
     "ng-lazyload-image": "^9.1.0",
     "ng-sidebar": "^9.4.2",
+    "ngx-infinite-scroll": "^10.0.1",
     "ngx-toastr": "^13.2.1",
     "rxjs": "~6.6.0",
     "swiper": "^6.5.8",
